--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
     <!-- Name and Photo Section -->
     <div class="header">
-        <img src="your-photo.jpg" alt="Your Photo">
+        <img src=\"C:\Users\Admin\.vscode\extensions\ms-vscode.cpptools-1.22.11-win32-x64\ui\WhatsApp Image 2025-04-03 at 11.26.18_0028b78a.jpg" alt="Your Photo">
         <h1>Kedar Sanjay Jasud</h1>
     </div>
 
